# qBittorrent-och

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: Dockerfile.gnu.aarch64  Dockerfile.musl.aarch64  Dockerfile.musl.x86_64  build.yml
scripts/: install.ps1  install.sh
src/: api.rs  app_state.rs  main.rs  models.rs  script_runner.rs  ui.rs
