[package]
name = "qb-och"
version = "0.1.1"
edition = "2021"
description = "A CLI tool and TUI for re-running qBittorrent on-completion scripts."
authors = ["revam"]
license = "MIT"

[[bin]]
name = "qb-och"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
ratatui-notifications = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
crossterm = "0.26"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
base64 = "0.21"
qbit-rs = "0.5"
clap = { version = "4", features = ["derive"] }
dirs = "5"
url = "2"